# auroris

./: .gitignore  NOTICE  README.md  env.yml  mkdocs.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  changelog_config.json
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: doc.yml  release.yml  test.yml
0.1.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1.1/api/: curator.html  functional.html  types.html  visualization.html
0.1.1/tutorials/: getting_started.html
0.1.2/: 404.html  index.html  sitemap.xml
0.1.2/api/: curator.html  functional.html  types.html  visualization.html
0.1.2/tutorials/: getting_started.html
0.1.3/: 404.html  index.html  sitemap.xml
0.1.3/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.3/tutorials/: getting_started.html
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.4/search/: search_index.json
0.1.4/tutorials/: getting_started.html
0.1.5/: 404.html  index.html  sitemap.xml
0.1.5/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.5/tutorials/: getting_started.html
0.1.6/: 404.html  index.html  sitemap.xml
0.1.6/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.6/tutorials/: getting_started.html
0.1.7/: 404.html  index.html  sitemap.xml
0.1.7/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.7/tutorials/: getting_started.html  stereoisomerism_QSAR.html  utils.html
0.1.8/: 404.html  index.html  sitemap.xml
0.1.8/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.8/tutorials/: getting_started.html  stereoisomerism_QSAR.html  utils.html
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/api/: actions.html  curator.html  functional.html  types.html  utils.html  visualization.html
0.1.9/tutorials/: getting_started.html  stereoisomerism_QSAR.html  utils.html
alchemy/: cli.py  utils.py
alchemy/curation/: __init__.py  _constants.py  _curator.py  functional.py
alchemy/report/: __init__.py  _report.py
alchemy/visualization/: __init__.py  _chemspace.py  _distribution.py  utils.py
auroris/: _version.py  cli.py  types.py  utils.py
auroris/curation/: __init__.py  _curator.py  functional.py
auroris/report/: __init__.py  _report.py
auroris/visualization/: __init__.py  _chemspace.py  _distribution.py  utils.py
docs/: index.md
docs/api/: actions.md  curator.md  functional.md  types.md  utils.md  visualization.md
docs/tutorials/: getting_started.ipynb  stereoisomerism_QSAR.ipynb  stereoisomerization.ipynb  utils.py
main/: 404.html  index.html  objects.inv  sitemap.xml
main/api/: actions.html  curator.html  functional.html  types.html  utils.html  (+1 more)
stable/: 404.html  index.html  sitemap.xml
tests/: conftest.py  test_curator.py  test_deduplication.py  test_discretization.py  test_mol_curation.py  test_outlier_detection.py  test_stereoisomer_ac.py
(+66 files in other folders)
